compiler/tests/success/vmovlpd.jazz
export
fn test_vmovlpd(reg u64 tmp) {
  reg u128 x;

  x = #set0_128();
  (u64) [tmp] = #VMOVLPD(x);
}
