compiler/tests/fail/register_allocation/x86-64/bug_421.jazz
export fn cqo128() {
  reg u128 x;
  x = #set0_128();
  x = #CQO_128(x);
}
